fix database import in docker

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,6 +16,7 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
+    "allowJs": true,
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "prisma.config.ts"]
