--- a/packages/sync-diagrams/package.json
+++ b/packages/sync-diagrams/package.json
@@ -11,13 +11,11 @@
   },
   "dependencies": {
     "@excalidraw/mermaid-to-excalidraw": "^0.3.0",
-    "@excalidraw/excalidraw": "^0.17.0",
-    "jsdom": "^25.0.0"
+    "playwright": "^1.58.2"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "tsx": "^4.0.0",
     "@types/node": "^20.0.0",
-    "@types/jsdom": "^21.0.0"
+    "tsx": "^4.0.0",
+    "typescript": "^5.0.0"
   }
 }
