--- a/packages/sync-diagrams/package.json
+++ b/packages/sync-diagrams/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@excalidraw/mermaid-to-excalidraw": "^0.3.0",
+    "esbuild": "~0.27.0",
     "playwright": "^1.58.2"
   },
   "devDependencies": {
