--- a/frontend/nginx.conf.template
+++ b/frontend/nginx.conf.template
@@ -16,7 +16,7 @@ http {
 
     # Re-resolve backend hostname every 30s so nginx picks up new IPs after redeploys.
     # __RESOLVER__ is substituted at container startup from /etc/resolv.conf.
-    resolver __RESOLVER__ valid=30s ipv6=off;
+    resolver __RESOLVER__ valid=30s;
 
     sendfile on;
     keepalive_timeout 65;
@@ -53,14 +53,14 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $forwarded_proto;
-            
+
             # Buffer and timeout settings for large payloads
             proxy_buffering on;
             proxy_buffer_size 4k;
             proxy_buffers 8 4k;
             proxy_busy_buffers_size 8k;
             client_body_buffer_size 128k;
-            
+
             # Timeouts for large uploads (300 seconds)
             proxy_connect_timeout 300s;
             proxy_send_timeout 300s;
@@ -79,7 +79,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $forwarded_proto;
-            
+
             # Longer timeouts for WebSocket connections
             proxy_read_timeout 3600s;
             proxy_send_timeout 3600s;
